fixed extra button alignment when there are less than 3 buttons

--- a/site/styles/_cta-buttons.scss
+++ b/site/styles/_cta-buttons.scss
@@ -164,7 +164,6 @@
     align-items: center;
     display: grid;
     gap: 16px;
-    grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr;
     justify-items: center;
     padding: 0 36px;
@@ -177,6 +176,8 @@
     > * {
       align-self: start;
       animation: fadein 2s;
+      grid-column: auto;
+      grid-row: 1;
     }
 
     /*#region ICON HACKS.  TODO: CLEAN THIS MESS UP! */
